--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -6,4 +6,17 @@ FetchContent_Declare(
   GIT_TAG 2.6.1 # better to use hash 
 )
 
+FetchContent_Declare(
+  imgui
+  GIT_REPOSITORY https://github.com/ocornut/imgui
+  GIT_TAG 35b1148efb839381b84de9290d9caf0b66ad7d03
+)
+FetchContent_Declare(
+  imgui-sfml
+  GIT_REPOSITORY https://github.com/SFML/imgui-sfml
+  GIT_TAG 82dc2033e51b8323857c3ae1cf1f458b3a933c35
+)
+
+FetchContent_MakeAvailable(imgui)
+add_subdirectory(imgui-sfml)
 add_subdirectory(sfml)
